<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    tools:context=".SecondActivity">

    <TableRow>

        <TextView
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#a7c65b"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/nama"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/receiver1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_span="2"
            android:background="#dce173"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="20sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#a7c65b"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tempat_lahir"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/receiver2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_span="2"
            android:background="#dce173"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="20sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#a7c65b"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tanggal_lahir"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/receiver3"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_span="2"
            android:background="#dce173"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="20sp" />
    </TableRow>

    <ImageView
        android:id="@+id/receiver4"
        android:layout_width="411dp"
        android:layout_height="244dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:src="@drawable/hello"
        android:contentDescription="@string/helloImage" />
</TableLayout>